--- a/examples/alpinejs-ts/package.json
+++ b/examples/alpinejs-ts/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@zag-js/accordion": "workspace:*",
+    "@zag-js/alpinejs": "workspace:*",
     "@zag-js/anatomy": "workspace:*",
     "@zag-js/anatomy-icons": "workspace:*",
     "@zag-js/angle-slider": "workspace:*",
