--- a/examples/alpinejs-ts/package.json
+++ b/examples/alpinejs-ts/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/alpinejs": "^3.13.11",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   },
