--- a/examples/alpine-ts/package.json
+++ b/examples/alpine-ts/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/alpinejs": "^3.13.11",
     "typescript": "~5.8.3",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "@zag-js/accordion": "workspace:*",
+    "@zag-js/alpine": "workspace:*",
+    "alpinejs": "^3.15.0"
   }
 }
